--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "name": "Marco Trevisani",
     "url": "https://github.com/trevonerd"
   },
-  "main": "dist/stickyfill.js",
+  "main": "dist/polysticky.js",
   "types": "types/index.d.ts",
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
