--- a/package.json
+++ b/package.json
@@ -1,32 +1,44 @@
 {
-  "name": "@trevonerd/polysticky",
-  "version": "1.0.1",
-  "description": "Polyfill for CSS `position: sticky (Stickyfill Reborn!)`",
-  "keywords": [
-    "sticky",
-    "polyfill"
-  ],
-  "license": "MIT",
-  "homepage": "https://github.com/trevonerd/polysticky",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/trevonerd/polysticky.git"
-  },
-  "author": {
-    "name": "Marco Trevisani",
-    "url": "https://github.com/trevonerd"
-  },
-  "main": "dist/polysticky.js",
-  "types": "types/index.d.ts",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-bump": "^0.8.0",
-    "grunt-contrib-uglify": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-shell": "^2.1.0",
-    "grunt-wrap": "^0.3.1"
-  },
-  "dependencies": {}
+    "name": "polyficky",
+    "version": "1.0.0",
+    "description": "Polyfill for CSS `position: sticky (Stickyfill Reborn!)`",
+    "keywords": [
+        "sticky",
+        "polyfill"
+    ],
+    "license": "MIT",
+    "homepage": "https://github.com/trevonerd/polyficky",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/trevonerd/polyficky.git"
+    },
+    "author": {
+        "name": "Marco Trevisani",
+        "url": "https://github.com/trevonerd"
+    },
+    "main": "dist/polyficky.js",
+    "types": "types/index.d.ts",
+    "scripts": {
+        "clean": "rm -rf dist",
+        "build": "yarn clean && babel src/polyficky.js --out-file dist/polyficky.js && babel src/polyficky.js --out-file dist/polyficky.min.js --presets=minify",
+        "lint": "eslint src",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "integrity:check": "yarn check --integrity",
+        "prepack": "yarn build"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "yarn lint && yarn integrity:check"
+        }
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.10.5",
+        "@babel/core": "^7.10.5",
+        "@babel/node": "^7.10.5",
+        "@babel/preset-env": "^7.10.4",
+        "babel-eslint": "10.1.0",
+        "babel-preset-minify": "^0.5.1",
+        "eslint": "7.4.0",
+        "husky": "^4.2.5"
+    }
 }
